# docling-inference

./: Dockerfile  pyproject.toml
.github/workflows/: cd.yaml
src/: main.py
