[project]
name = "docling-inference"
version = "0.2.0"
description = "Docling inference server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.28.0",
    "docling[vlm]",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.19",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]