[project]
name = "docling-inference"
version = "0.2.0"
description = "Docling inference server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.28.0",
    "docling[vlm]",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "flash_attn>=2.6.0",
]

[build-system]
requires = [
        "setuptools>78.0.2",
        "torch>=2.6.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]